View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023192 | Open CASCADE | OCCT:DRAW | public | 2012-06-06 10:31 | 2012-11-16 13:16 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023192: Regression in writestl command | ||||
Description | Draw command 'writestl' has a regression: when the parameter isParallel is used, it is only possible to write binary STL, not ASCII. | ||||
Steps To Reproduce | pload MODELING DATAEXCHANGE box b 10 10 10 writestl b c:/test.stl 0 0 # The resulting file has binary format # I suppose our tests do not check format of STL files - this needs to be corrected. | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 G0, F0 | ||||
|
Processing of arguments in 'writestl' command is corrected, changes committed to CR23192. Please review the branch. |
|
No remarks on the fix, please test. Please create a test case and double-check that the test is able to recognize the fix! Note that this regression has been introduced in OCCT 6.5.3 by fix on 0022867 |
2012-06-07 17:34 tester |
G0 (1,341 bytes) |
|
Dear BugMaster, The workbenches KAS:dev:mkv-23192-occt (GIT branch CR23192) KAS:dev:mkv-23192-products (GIT master) were compiled on Linux platform and tested. Regression: Not detected Improvements: Not detected Testing case: chl 934 G0 testing case has been created for issue. Results of execution is successfully. See results in /QADisk/occttests/results/KAS/dev/mkv-23192-products_06062012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120525-opt_25052012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
2012-06-07 17:40 tester |
F0 (1,340 bytes) |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-06-06 10:31 |
|
New Issue | |
2012-06-06 10:31 |
|
Assigned To | => szv |
2012-06-06 10:32 |
|
Status | new => assigned |
2012-06-06 12:32 |
|
Note Added: 0020649 | |
2012-06-06 12:32 |
|
Assigned To | szv => abv |
2012-06-06 12:32 |
|
Status | assigned => resolved |
2012-06-06 12:43 |
|
Note Added: 0020650 | |
2012-06-06 12:43 |
|
Assigned To | abv => bugmaster |
2012-06-06 12:43 |
|
Status | resolved => reviewed |
2012-06-06 12:43 |
|
Assigned To | bugmaster => gka |
2012-06-06 12:46 |
|
Assigned To | gka => bugmaster |
2012-06-06 15:54 |
|
Assigned To | bugmaster => mkv |
2012-06-07 17:34 |
|
File Added: G0 | |
2012-06-07 17:36 |
|
Note Added: 0020664 | |
2012-06-07 17:36 |
|
Test case number | => chl 934 G0 |
2012-06-07 17:36 |
|
Assigned To | mkv => bugmaster |
2012-06-07 17:36 |
|
Status | reviewed => tested |
2012-06-07 17:40 |
|
File Added: F0 | |
2012-06-07 17:41 |
|
Test case number | chl 934 G0 => chl 934 G0, F0 |
2012-06-13 14:11 |
|
Changeset attached | => occt master 48a06a30 |
2012-06-13 14:11 |
|
Assigned To | bugmaster => szv |
2012-06-13 14:11 |
|
Status | tested => verified |
2012-06-13 14:11 |
|
Resolution | open => fixed |
2012-11-16 13:15 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:16 | bugmaster | Status | verified => closed |