0023192: Regression in writestl command

Processing of arguments in 'writestl' command is corrected